Actualización de: monitoring/grafana/provisioning/dashboards/dashboard.yml monitoring/grafana/provisioning/dashboards/mydashboard.json monitoring/prometheus/Dockerfile monitoring/prometheus/prometheus.yml real_server/Dockerfile real_server/api/__pycache__/urls.cpython-311.pyc real_server/api/urls.py real_server/docker-compose.yml real_server/ft_transcendence_backend/__pycache__/settings.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/urls.cpython-311.pyc real_server/ft_transcendence_backend/settings.py real_server/ft_transcendence_backend/urls.py real_server/staticfiles/rest_framework/css/bootstrap-theme.min.css real_server/staticfiles/rest_framework/css/bootstrap-theme.min.css.map real_server/staticfiles/rest_framework/css/bootstrap-tweaks.css real_server/staticfiles/rest_framework/css/bootstrap.min.css real_server/staticfiles/rest_framework/css/bootstrap.min.css.map real_server/staticfiles/rest_framework/css/default.css real_server/staticfiles/rest_framework/css/font-awesome-4.0.3.css real_server/staticfiles/rest_framework/css/prettify.css real_server/staticfiles/rest_framework/docs/css/base.css real_server/staticfiles/rest_framework/docs/css/highlight.css real_server/staticfiles/rest_framework/docs/css/jquery.json-view.min.css real_server/staticfiles/rest_framework/docs/img/favicon.ico real_server/staticfiles/rest_framework/docs/img/grid.png real_server/staticfiles/rest_framework/docs/js/api.js real_server/staticfiles/rest_framework/docs/js/highlight.pack.js real_server/staticfiles/rest_framework/docs/js/jquery.json-view.min.js real_server/staticfiles/rest_framework/fonts/fontawesome-webfont.eot real_server/staticfiles/rest_framework/fonts/fontawesome-webfont.svg real_server/staticfiles/rest_framework/fonts/fontawesome-webfont.ttf real_server/staticfiles/rest_framework/fonts/fontawesome-webfont.woff real_server/staticfiles/rest_framework/fonts/glyphicons-halflings-regular.eot real_server/staticfiles/rest_framework/fonts/glyphicons-halflings-regul

--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -29,19 +29,21 @@ services:
     build: .
     command: >
       sh -c "
-        until pg_isready -h db -p 5432; do
-          echo 'Esperando a que la base de datos esté lista...';
-          sleep 1;
-        done &&
-        python manage.py migrate &&
-        python manage.py runserver 0.0.0.0:8000"
+      until pg_isready -h db -p 5432; do
+      echo 'Esperando a que la base de datos esté lista...';
+      sleep 1;
+      done &&
+      python manage.py collectstatic --noinput &&
+      python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     environment:
       - DJANGO_SETTINGS_MODULE=ft_transcendence_backend.settings
-      - DATABASE_URL=postgres://user:password@db:5432/dbname
+      - DJANGO_DEBUG=True
+      - DATABASE_URL=postgres://myuser:mypassword@db:5432/mydatabase
     depends_on:
       - db
     networks:
