--- a/real_server/Dockerfile
+++ b/real_server/Dockerfile
@@ -5,23 +5,17 @@ WORKDIR /app
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
-
-RUN pip install djangorestframework
-
-RUN pip install django-crispy-forms
-
+RUN pip install djangorestframework django-crispy-forms django-prometheus
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     gcc \
-	postgresql-client \
+    postgresql-client \
     python3-dev \
     nano \
-	curl \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 COPY . .
 
-RUN python manage.py collectstatic --noinput
-
-CMD ["python manage.py runserver 0.0.0.0:8000"]
+CMD ["sh", "-c", "python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
