Actualización de: monitoring/grafana/Dockerfile monitoring/grafana/provisioning/dashboards/dashboard.yml monitoring/grafana/provisioning/dashboards/mydashboard.json monitoring/grafana/provisioning/datasources/datasource.yml monitoring/graphana/Dockerfile monitoring/prometheus/Dockerfile monitoring/prometheus/prometheus.yml real_server/Dockerfile real_server/api/__pycache__/admin.cpython-311.pyc real_server/api/__pycache__/models.cpython-311.pyc real_server/api/__pycache__/serializers.cpython-311.pyc real_server/api/__pycache__/urls.cpython-311.pyc real_server/api/__pycache__/views.cpython-311.pyc real_server/api/templates/index.html real_server/api/templates/register.html real_server/api/urls.py real_server/api/views.py real_server/docker-compose.yml real_server/favicon.ico real_server/ft_transcendence_backend/__pycache__/settings.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/urls.cpython-311.pyc real_server/ft_transcendence_backend/custom.scss real_server/ft_transcendence_backend/settings.py real_server/ft_transcendence_backend/urls.py real_server/ft_transcendence_backend/views.py real_server/makefile real_server/pages/Dockerfile real_server/pages/__init__.py real_server/pages/__pycache__/__init__.cpython-311.pyc real_server/pages/__pycache__/forms.cpython-311.pyc real_server/pages/__pycache__/views.cpython-311.pyc real_server/pages/admin.py real_server/pages/apps.py real_server/pages/forms.py real_server/pages/models.py real_server/pages/static/images/favicon.ico real_server/pages/tests.py real_server/pages/urls.py real_server/pages/views.py real_server/pong.png real_server/requirements.txt real_server/staticfiles/admin/img/favicon.ico real_server/staticfiles/rest_framework/css/bootstrap-theme.min.css real_server/staticfiles/rest_framework/css/bootstrap-theme.min.css.map real_server/staticfiles/rest_framework/css/bootstrap-tweaks.css real_server/staticfiles/rest_framework/css/bootstrap.min.css real_server/staticfiles/rest_framework/css/bootstrap

--- a/real_server/makefile
+++ b/real_server/makefile
@@ -16,6 +16,8 @@ clean:
 	docker rmi -f $$(docker images -qa) || true;\
 	docker volume rm $$(docker volume ls -q) || true;\
 	docker network rm $$(docker network ls -q) || true;\
-	docker system prune -f --volumes
+	docker system prune -f --volumes || true;\
+	find . -name "__pycache__" -type d -exec rm -r {} +	;\
+	find . -name "*.pyc" -delete 
 
 .PHONY: all re down clean
