--- a/real_server/pages/Dockerfile
+++ b/real_server/pages/Dockerfile
@@ -10,6 +10,8 @@ RUN pip install djangorestframework
 
 RUN python -m pip install Django
 
+RUN mkdir /ft_transcendence_fronten/vol
+
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     gcc \
@@ -20,4 +22,4 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 COPY . .
 
-#CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
