--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -1,10 +1,13 @@
 global:
-  scrape_interval:     15s
+  scrape_interval: 15s
   evaluation_interval: 15s
 
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: 'django'
     static_configs:
-      - targets: ['localhost:3300']
+      - targets: ['backend:8000']
+    metrics_path: '/metrics'
 
-  
+  - job_name: 'postgres'
+    static_configs:
+      - targets: ['postgres_exporter:9187']
