--- a/real_server/Dockerfile
+++ b/real_server/Dockerfile
@@ -5,20 +5,18 @@ WORKDIR /app
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
-
-RUN pip install djangorestframework
+RUN pip install djangorestframework django-crispy-forms django-prometheus
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
 	postgresql-client \
     libpq-dev \
     gcc \
+    postgresql-client \
     python3-dev \
     nano \
-	curl \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 COPY . .
 
-RUN python manage.py collectstatic --noinput
-
-CMD ["python manage.py runserver 0.0.0.0:8000"]
+CMD ["sh", "-c", "python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
